@@ -17,8 +17,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.release>21</maven.compiler.release>
     <javafx.mainClass>controller.Launcher</javafx.mainClass>
     <javafx.skip>false</javafx.skip>
     <junit.version>5.10.2</junit.version>
@@ -111,8 +112,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <release>${maven.compiler.release}</release>
         </configuration>
       </plugin>
 
@@ -126,6 +126,9 @@
             <configuration>
               <mainClass>${javafx.mainClass}</mainClass>
               <launcher>app</launcher>
+              <options>
+                <option>--enable-native-access=javafx.graphics</option>
+              </options>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
               <noManPages>true</noManPages>
